ADD: Elapsed time added to shader pipeline constants. CHG: Some properties such as Stencil Reference of device states are moved to GraphicsDevice interface. ADD: Particle rendering stage added to ZERenderer. CHG: Lights are now complete entities which uses render commands for rendering. CHG: Minor renaming done. CHG: ZEHash generator interface accepts and returns ZESize for consistency.
svn path=/branches/v0.6.1-NewGraphics/; revision=1273

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -65,6 +65,8 @@ ze_add_source(ZERenderStageShadow.cpp			Sources)
 ze_add_source(ZERenderStageShadow.h				Sources Headers)
 ze_add_source(ZERenderStageTransparent.cpp		Sources)
 ze_add_source(ZERenderStageTransparent.h		Sources Headers)
+ze_add_source(ZERenderStageParticle.cpp			Sources)
+ze_add_source(ZERenderStageParticle.h			Sources Headers)
 ze_add_source(ZERenderStagePostProcess.cpp		Sources)
 ze_add_source(ZERenderStagePostProcess.h		Sources Headers)
 ze_add_source(ZEMaterial.cpp 					Sources)
@@ -77,14 +79,14 @@ ze_add_source(ZEMaterialUserInterface.cpp 		Sources)
 ze_add_source(ZEMaterialUserInterface.h 		Sources Headers)
 ze_add_source(ZEMaterialLight.cpp 				Sources)
 ze_add_source(ZEMaterialLight.h 				Sources Header)
-ze_add_source(ZEMaterialDirectionalLight.cpp	Sources)
-ze_add_source(ZEMaterialDirectionalLight.h 		Sources Header)
-ze_add_source(ZEMaterialPointLight.cpp 			Sources)
-ze_add_source(ZEMaterialPointLight.h 			Sources Header)
-ze_add_source(ZEMaterialProjectiveLight.cpp 	Sources)
-ze_add_source(ZEMaterialProjectiveLight.h 		Sources Header)
-ze_add_source(ZEMaterialOmniProjectiveLight.cpp	Sources)
-ze_add_source(ZEMaterialOmniProjectiveLight.h 	Sources Header)
+ze_add_source(ZEMaterialLightPoint.cpp 			Sources)
+ze_add_source(ZEMaterialLightPoint.h 			Sources Header)
+ze_add_source(ZEMaterialLightProjective.cpp 	Sources)
+ze_add_source(ZEMaterialLightProjective.h 		Sources Header)
+ze_add_source(ZEMaterialLightDirectional.cpp	Sources)
+ze_add_source(ZEMaterialLightDirectional.h 		Sources Header)
+ze_add_source(ZEMaterialLightOmniProjective.cpp	Sources)
+ze_add_source(ZEMaterialLightOmniProjective.h 	Sources Header)
 #ze_add_source(ZESkyBoxMaterial.cpp 			Sources)
 #ze_add_source(ZESkyBoxMaterial.h 				Sources Header)
 #ze_add_source(ZESkyDomeMaterial.cpp 			Sources)
