--- a/Source/ZEModules/ZEDirectInput/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirectInput/CMakeLists.txt
@@ -35,8 +35,10 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEDirectInputModule.cpp				Sources)
-ze_add_source(ZEDirectInputModule.h					Sources)
+ze_add_source(ZEDirectInputModule.cpp			Sources)
+ze_add_source(ZEDirectInputModule.h				Sources)
+ze_add_source(ZEDirectInputDevice.cpp			Sources)
+ze_add_source(ZEDirectInputDevice.h				Sources)
 
 include_directories(
 	${ZEBUILD_INCLUDE_PATH}/DirectX)
@@ -46,4 +48,4 @@ link_directories(
 
 ze_add_library(ZEDirectInput 
 	SOURCES ${Sources}
-	LIBS ZEDirectInput dinput8.lib dxguid.lib)
+	LIBS libDirectInput)
