--- a/Source/ZEEngine/ZEUI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEUI/CMakeLists.txt
@@ -77,6 +77,8 @@ ze_add_source(ZEUILabel.cpp							Sources)
 ze_add_source(ZEUILabel.h							Sources Headers)
 ze_add_source(ZEUITextCursor.cpp					Sources)
 ze_add_source(ZEUITextCursor.h						Sources Headers)
+ze_add_source(ZEUIDebugDrawTag.cpp					Sources)
+ze_add_source(ZEUIDebugDrawTag.h					Sources Headers)
 
 
 
