--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -55,6 +55,9 @@ ze_add_source(ZEModelResource.cpp			Sources)
 ze_add_source(ZEModelResource.h				Sources Headers)
 ze_add_source(ZEModelHelper.cpp				Sources)
 ze_add_source(ZEModelHelper.h				Sources Headers)
+ze_add_source(ZEModelDebugDrawer.cpp		Sources)
+ze_add_source(ZEModelDebugDrawer.h			Sources Headers)
+
 
 ze_add_library(ZEModel 
 	SOURCES ${Sources}
