CHG: ZEMetaCompiler processor has been integrated into CMake makefiles. FIX: Various bug fixes on ZEMetaGenerator.
svn path=/branches/v0.6.1-NewMeta/; revision=1282

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -39,15 +39,15 @@ add_subdirectory(ZEPostProcessor)
 
 
 ze_add_source(ZECamera.cpp							Sources)
-ze_add_source(ZECamera.h							Sources Headers ZEPP)
+ze_add_source(ZECamera.h							Sources Headers ZEMC)
 ze_add_source(ZECanvas.cpp							Sources)
 ze_add_source(ZECanvas.h 							Sources Headers)
 ze_add_source(ZECloudMaterial.cpp					Sources)
 ze_add_source(ZECloudMaterial.h 					Sources Headers)
 ze_add_source(ZEDirectionalLight.cpp	 			Sources)
-ze_add_source(ZEDirectionalLight.h					Sources Headers ZEPP)
+ze_add_source(ZEDirectionalLight.h					Sources Headers ZEMC)
 ze_add_source(ZEFixedMaterial.cpp 					Sources)
-ze_add_source(ZEFixedMaterial.h 					Sources Headers ZEPP)
+ze_add_source(ZEFixedMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZEFrameRenderer.cpp 					Sources)
 ze_add_source(ZEFrameRenderer.h 					Sources Headers)
 ze_add_source(ZEGraphicsModule.cpp 					Sources)
@@ -56,9 +56,9 @@ ze_add_source(ZEIndexBuffer.cpp 					Sources)
 ze_add_source(ZEIndexBuffer.h 						Sources Headers)
 ze_add_source(ZEIndexedPolygon.h 					Sources Headers)
 ze_add_source(ZELight.cpp 							Sources)
-ze_add_source(ZELight.h 							Sources Headers ZEPP)
+ze_add_source(ZELight.h 							Sources Headers ZEMC)
 ze_add_source(ZEMaterial.cpp 						Sources)
-ze_add_source(ZEMaterial.h 							Sources Headers ZEPP)
+ze_add_source(ZEMaterial.h 							Sources Headers ZEMC)
 ze_add_source(ZEMaterialComponents.h				Sources Headers)
 ze_add_source(ZEMaterialFileFormat.h 				Sources)
 ze_add_source(ZEMaterialResource.cpp 				Sources)
@@ -66,11 +66,11 @@ ze_add_source(ZEMaterialResource.h 					Sources Headers)
 ze_add_source(ZEMoonMaterial.cpp 					Sources)
 ze_add_source(ZEMoonMaterial.h 						Sources Headers)
 ze_add_source(ZEOmniProjectiveLight.cpp 			Sources)
-ze_add_source(ZEOmniProjectiveLight.h 				Sources Headers ZEPP)
+ze_add_source(ZEOmniProjectiveLight.h 				Sources Headers ZEMC)
 ze_add_source(ZEPointLight.cpp 						Sources)
-ze_add_source(ZEPointLight.h 						Sources Headers ZEPP)
+ze_add_source(ZEPointLight.h 						Sources Headers ZEMC)
 ze_add_source(ZEProjectiveLight.cpp 				Sources)
-ze_add_source(ZEProjectiveLight.h 					Sources Headers ZEPP)
+ze_add_source(ZEProjectiveLight.h 					Sources Headers ZEMC)
 ze_add_source(ZERenderer.cpp 						Sources)
 ze_add_source(ZERenderer.h 							Sources Headers)
 ze_add_source(ZERenderCommand.cpp 					Sources)
@@ -84,7 +84,7 @@ ze_add_source(ZESkyBoxMaterial.h 					Sources Headers)
 ze_add_source(ZESkyDomeMaterial.cpp 				Sources)
 ze_add_source(ZESkyDomeMaterial.h 					Sources Headers)
 ze_add_source(ZETerrainMaterial.cpp					Sources)
-ze_add_source(ZETerrainMaterial.h 					Sources Headers ZEPP)
+ze_add_source(ZETerrainMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZETexture.cpp 						Sources)
 ze_add_source(ZETexture.h 							Sources Headers)
 ze_add_source(ZETexture2D.cpp						Sources)
