--- a/Source/ZEEngine/ZEInterior/CMakeLists.txt
+++ b/Source/ZEEngine/ZEInterior/CMakeLists.txt
@@ -36,7 +36,7 @@
 cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZEInterior.cpp				Sources)
-ze_add_source(ZEInterior.h					Sources Headers ZEPP)
+ze_add_source(ZEInterior.h					Sources Headers ZEMC)
 ze_add_source(ZEInteriorDoor.cpp			Sources)
 ze_add_source(ZEInteriorDoor.h				Sources Headers)
 ze_add_source(ZEInteriorRoom.cpp			Sources)
