--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -77,7 +77,7 @@ ze_add_source(ZED3D9FrameRenderer.h						Sources)
 ze_add_source(ZED3D9GrainProcessor.cpp					Sources)
 ze_add_source(ZED3D9GrainProcessor.h					Sources)
 ze_add_source(ZED3D9HDRProcessor.cpp					Sources)
-ze_add_source(ZED3D9HDRProcessor.h						Sources ZEPP)
+ze_add_source(ZED3D9HDRProcessor.h						Sources ZEMC)
 ze_add_source(ZED3D9IndexBuffer.cpp						Sources)
 ze_add_source(ZED3D9IndexBuffer.h						Sources)
 ze_add_source(ZED3D9MLAAProcessorAreaImage.cpp			Sources)
