--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -40,7 +40,7 @@ ze_add_source(ZECanvasBrush.h			Sources Headers ZEMC)
 ze_add_source(ZECharacter.cpp			Sources)
 ze_add_source(ZECharacter.h				Sources Headers ZEMC)
 ze_add_source(ZECloud.cpp				Sources)
-ze_add_source(ZECloud.h					Sources Headers)
+ze_add_source(ZECloud.h					Sources Headers ZEMC)
 ze_add_source(ZEDrawParameters.cpp		Sources)
 ze_add_source(ZEDrawParameters.h		Sources Headers)
 ze_add_source(ZEDrawStatistics.cpp		Sources)
@@ -50,15 +50,15 @@ ze_add_source(ZEEntity.h				Sources Headers ZEMC)
 ze_add_source(ZEEntityProvider.cpp		Sources)
 ze_add_source(ZEEntityProvider.h		Sources Headers)
 ze_add_source(ZEGame.cpp				Sources)
-ze_add_source(ZEGame.h					Sources Headers)
+ze_add_source(ZEGame.h					Sources Headers ZEMC)
 ze_add_source(ZEGameProvider.cpp		Sources)
 ze_add_source(ZEGameProvider.h			Sources Headers)
 ze_add_source(ZEGrid.cpp				Sources)
 ze_add_source(ZEGrid.h					Sources	Headers ZEMC)
 ze_add_source(ZEGizmo.cpp	    		Sources)
-ze_add_source(ZEGizmo.h					Sources	Headers)
+ze_add_source(ZEGizmo.h					Sources	Headers ZEMC)
 ze_add_source(ZEMoon.cpp	    		Sources)
-ze_add_source(ZEMoon.h					Sources	Headers)
+ze_add_source(ZEMoon.h					Sources	Headers ZEMC)
 ze_add_source(ZEOrbit.cpp				Sources)
 ze_add_source(ZEOrbit.h					Sources Header)
 ze_add_source(ZEPlayer.cpp				Sources)
@@ -68,7 +68,7 @@ ze_add_source(ZEPresentationSlide.h		Sources Headers ZEMC)
 ze_add_source(ZERayCaster.cpp			Sources)
 ze_add_source(ZERayCaster.h				Sources Headers)
 ze_add_source(ZEScene.cpp				Sources)
-ze_add_source(ZEScene.h					Sources Headers)
+ze_add_source(ZEScene.h					Sources Headers ZEMC)
 ze_add_source(ZESceneDebugDraw.cpp		Sources)
 ze_add_source(ZESceneDebugDraw.h		Sources Headers)
 ze_add_source(ZEDebugDrawer.cpp			Sources)
@@ -78,11 +78,11 @@ ze_add_source(ZESceneCuller.h			Sources Headers)
 ze_add_source(ZESkyBrush.cpp			Sources)
 ze_add_source(ZESkyBrush.h				Sources Headers ZEMC)
 ze_add_source(ZESkyDome.cpp				Sources)
-ze_add_source(ZESkyDome.h				Sources Headers)
+ze_add_source(ZESkyDome.h				Sources Headers ZEMC)
 ze_add_source(ZETrigger.cpp				Sources)
 ze_add_source(ZETrigger.h				Sources Headers ZEMC)
 ze_add_source(ZEWeather.cpp				Sources)
-ze_add_source(ZEWeather.h				Sources Headers)
+ze_add_source(ZEWeather.h				Sources Headers ZEMC)
 
 ze_add_library(ZEGame 
 	SOURCES ${Sources}
