--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -54,6 +54,8 @@ ze_add_source(ZEVertexLayout.cpp			Sources)
 ze_add_source(ZEVertexLayout.h				Sources Headers)
 ze_add_source(ZEVertexTypes.cpp				Sources)
 ze_add_source(ZEVertexTypes.h				Sources Headers)
+ze_add_source(ZEStatePool.cpp				Sources)
+ze_add_source(ZEStatePool.h					Sources Headers)
 
 ze_add_source(ZETexture.cpp 				Sources)
 ze_add_source(ZETexture.h 					Sources Headers)
