CHG: ZEUI integrated into new meta system.
svn path=/branches/v0.6.1-NewMeta/; revision=1290

--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -78,7 +78,7 @@ ze_add_source(ZEProfilerCounter.h					Sources Headers)
 ze_add_source(ZERealTimeClock.cpp					Sources)
 ze_add_source(ZERealTimeClock.h						Sources Headers)
 ze_add_source(ZEResource.cpp						Sources)
-ze_add_source(ZEResource.h							Sources Headers)
+ze_add_source(ZEResource.h							Sources Headers ZEMC)
 ze_add_source(ZEResourceManager.cpp					Sources)
 ze_add_source(ZEResourceManager.h					Sources Headers)
 ze_add_source(ZESystemMessageManager.cpp			Sources)
