--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -94,7 +94,7 @@ ze_add_source(ZETexture3D.h 						Sources Headers)
 ze_add_source(ZETextureCube.cpp 					Sources)
 ze_add_source(ZETextureCube.h 						Sources Headers)
 ze_add_source(ZEUIMaterial.cpp 						Sources)
-ze_add_source(ZEUIMaterial.h 						Sources Headers)
+ze_add_source(ZEUIMaterial.h 						Sources Headers ZEMC)
 ze_add_source(ZEVertexBuffer.cpp 					Sources)
 ze_add_source(ZEVertexBuffer.h 						Sources Headers)
 ze_add_source(ZEVertexDeclaration.cpp				Sources)
