--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -40,21 +40,21 @@ ze_add_source(ZEModel.h						Sources Headers ZEMC)
 ze_add_source(ZEModelAnimation.cpp			Sources)
 ze_add_source(ZEModelAnimation.h			Sources Headers)
 ze_add_source(ZEModelAnimationTrack.cpp		Sources)
-ze_add_source(ZEModelAnimationTrack.h		Sources Headers)
+ze_add_source(ZEModelAnimationTrack.h		Sources Headers ZEMC)
 ze_add_source(ZEModelBone.cpp				Sources)
-ze_add_source(ZEModelBone.h					Sources Headers)
+ze_add_source(ZEModelBone.h					Sources Headers ZEMC)
 ze_add_source(ZEModelIKChain.cpp			Sources)
 ze_add_source(ZEModelIKChain.h				Sources Headers)
 ze_add_source(ZEModelIKChainNode.cpp		Sources)
 ze_add_source(ZEModelIKChainNode.h			Sources Headers)
 ze_add_source(ZEModelMesh.cpp				Sources)
-ze_add_source(ZEModelMesh.h					Sources Headers)
+ze_add_source(ZEModelMesh.h					Sources Headers ZEMC)
 ze_add_source(ZEModelMeshLOD.cpp			Sources)
 ze_add_source(ZEModelMeshLOD.h				Sources Headers)
 ze_add_source(ZEModelResource.cpp			Sources)
 ze_add_source(ZEModelResource.h				Sources Headers)
 ze_add_source(ZEModelHelper.cpp				Sources)
-ze_add_source(ZEModelHelper.h				Sources Headers)
+ze_add_source(ZEModelHelper.h				Sources Headers ZEMC)
 
 ze_add_library(ZEModel 
 	SOURCES ${Sources}
