--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -85,10 +85,10 @@ ze_add_source(ZEString.cpp				Sources)
 ze_add_source(ZEString.h				Sources Headers)
 ze_add_source(ZEStringTests.cpp			Tests)
 ze_add_source(ZECharacterTests.cpp		Tests)
-ze_add_source(ZETypedVariant.cpp		Sources)
-ze_add_source(ZETypedVariant.h			Sources Headers)
-ze_add_source(ZEVariant.cpp				Sources)
-ze_add_source(ZEVariant.h				Sources Headers)
+ze_add_source(ZETypedValue.cpp			Sources)
+ze_add_source(ZETypedValue.h			Sources Headers)
+ze_add_source(ZEValue.cpp				Sources)
+ze_add_source(ZEValue.h					Sources Headers)
 ze_add_source(ZEVariantTests.cpp		Tests)
 ze_add_source(ZEPointerTestClass.h		Tests)
 ze_add_source(ZEPointerTestClass.cpp	Tests)
