ADD: ZEMetaClassCollectionGenerator has been added. CHG: Class collection generation functionality has been added into ZEMetaCompiler.
svn path=/branches/v0.6.1-NewMeta/; revision=1293

--- a/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
+++ b/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
@@ -35,17 +35,19 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-ze_add_source(ZEMain.cpp                    Sources)
-ze_add_source(ZEMetaCompilerOptions.cpp     Sources)
-ze_add_source(ZEMetaCompilerOptions.h       Sources)
-ze_add_source(ZEMetaData.cpp                Sources)
-ze_add_source(ZEMetaData.h                  Sources)
-ze_add_source(ZEMetaGenerator.cpp           Sources)
-ze_add_source(ZEMetaGenerator.h             Sources)
-ze_add_source(ZEMetaProcessor.cpp           Sources)
-ze_add_source(ZEMetaProcessor.h             Sources)
-ze_add_source(ZEMetaProcessorInternal.cpp   Sources)
-ze_add_source(ZEMetaProcessorInternal.h     Sources)
-ze_add_source(ZEMetaProcessorClang.cpp      Sources)
+ze_add_source(ZEMain.cpp                          Sources)
+ze_add_source(ZEMetaCompilerOptions.cpp           Sources)
+ze_add_source(ZEMetaCompilerOptions.h             Sources)
+ze_add_source(ZEMetaData.cpp                      Sources)
+ze_add_source(ZEMetaData.h                        Sources)
+ze_add_source(ZEMetaGenerator.cpp                 Sources)
+ze_add_source(ZEMetaGenerator.h                   Sources)
+ze_add_source(ZEMetaProcessor.cpp                 Sources)
+ze_add_source(ZEMetaProcessor.h                   Sources)
+ze_add_source(ZEMetaProcessorInternal.cpp         Sources)
+ze_add_source(ZEMetaProcessorInternal.h           Sources)
+ze_add_source(ZEMetaProcessorClang.cpp            Sources)
+ze_add_source(ZEMetaClassCollectionGenerator.h    Sources)
+ze_add_source(ZEMetaClassCollectionGenerator.cpp  Sources)
 
 ze_add_executable(ZEMetaCompiler CONSOLE SOURCES ${Sources} LIBS ZEFoundation ZEMeta libClang)
