CHG: ZEFileCompiler and ZEMetaCompiler flags removed from ze_add_source and put into ze_add_[targets] functions. CMakeLists.txt file has been updated according to this change. CHG: ZEFileCompiler parameters reviewed. ZEBuild has been updated according to this change. CGG: ZEMetaCompiler parameters reviewed. FIX: Failing compiles in ZEMetaCompilers returns EXIT_FAILTURE. ADD: MSVC style error message support has been added to ZEMetaCompiler (-msvc parameter) and ZEBuild has been updated according to this. CHG: ZEMetaClassCollection has been renamed to ZEMetaCollection. ADD: MetaCollection generation support has been added to ZEBuild.
svn path=/branches/v0.6.1-NewMeta/; revision=1296

--- a/Source/ZECodeUtilities/ZEFileCompiler/CMakeLists.txt
+++ b/Source/ZECodeUtilities/ZEFileCompiler/CMakeLists.txt
@@ -37,10 +37,10 @@ cmake_minimum_required(VERSION 2.8)
 
 ze_add_source(ZEFileCompiler.cpp 			Sources)
 ze_add_source(ZEFileCompiler.h   			Sources)
-ze_add_source(ZEFileCompilerOptions.cpp		UtilitySources)
-ze_add_source(ZEFileCompilerOptions.h		UtilitySources)
-ze_add_library(ZEFileCompiler SOURCES ${Sources} LIBS ZEFoundation)
-
-
-ze_add_source(ZEMain.cpp					UtilitySources)
-ze_add_executable(ZEFC CONSOLE SOURCES ${UtilitySources} LIBS ZEFoundation ZEFileCompiler)
+ze_add_source(ZEFileCompilerOptions.cpp		Sources)
+ze_add_source(ZEFileCompilerOptions.h		Sources)
+ze_add_source(ZEMain.cpp					Sources)
+ze_add_executable(ZEFileCompiler 
+	CONSOLE 
+	SOURCES ${Sources} 
+	LIBS ZEFoundation)
