--- a/Source/ZEEngine/ZESound/CMakeLists.txt
+++ b/Source/ZEEngine/ZESound/CMakeLists.txt
@@ -53,7 +53,9 @@ ze_add_source(ZESoundSource.h				Sources Headers ZEMC)
 ze_add_source(ZESoundSource3D.cpp			Sources)
 ze_add_source(ZESoundSource3D.h				Sources Headers ZEMC)
 
+
 ze_add_library(ZESound 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	ZEMC ${ZEMC}
 	LIBS ZEFoundation libmpg123 libOGG libVorbis)
