--- a/Source/ZEEngine/ZEInterior/CMakeLists.txt
+++ b/Source/ZEEngine/ZEInterior/CMakeLists.txt
@@ -46,7 +46,9 @@ ze_add_source(ZEInteriorHelper.h			Sources Headers)
 ze_add_source(ZEInteriorResource.cpp		Sources)
 ze_add_source(ZEInteriorResource.h			Sources Headers)
 
+
 ze_add_library(ZEInterior 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	ZEMC ${ZEMC}
 	LIBS ZEFoundation)
