--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -134,7 +134,9 @@ ze_add_source(ZED3D9ZoomBlurProcessor.cpp				Sources)
 ze_add_source(ZED3D9ZoomBlurProcessor.h					Sources)
 ze_add_source(ZED3D9Plugin.h							Sources)
 ze_add_source(ZED3D9Plugin.cpp							Sources)
-	
+
+
 ze_add_library(ZEDirect3D9 
 	SOURCES ${Sources}
+	ZEMC ${ZEMC}
 	LIBS libDirect3D9)
