FIX: Fixed missing ZE_OBJECT macros
svn path=/branches/v0.6.1-NewMeta/; revision=1298

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -80,7 +80,7 @@ ze_add_source(ZESkyBrush.h				Sources Headers ZEMC)
 ze_add_source(ZESkyDome.cpp				Sources)
 ze_add_source(ZESkyDome.h				Sources Headers ZEMC)
 ze_add_source(ZETrigger.cpp				Sources)
-ze_add_source(ZETrigger.h				Sources Headers ZEMC)
+ze_add_source(ZETrigger.h				Sources Headers)
 ze_add_source(ZEWeather.cpp				Sources)
 ze_add_source(ZEWeather.h				Sources Headers ZEMC)
 
