--- a/Source/ZEEngine/ZESound/CMakeLists.txt
+++ b/Source/ZEEngine/ZESound/CMakeLists.txt
@@ -41,7 +41,7 @@ ze_add_source(ZESoundFX.h					Sources Headers)
 ze_add_source(ZESoundModule.cpp				Sources)
 ze_add_source(ZESoundModule.h				Sources Headers)
 ze_add_source(ZESoundResource.cpp			Sources)
-ze_add_source(ZESoundResource.h				Sources Headers)
+ze_add_source(ZESoundResource.h				Sources Headers ZEMC)
 ze_add_source(ZESoundResourceMP3.cpp		Sources)
 ze_add_source(ZESoundResourceMP3.h			Sources)
 ze_add_source(ZESoundResourceOGG.cpp		Sources)
