--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -47,7 +47,7 @@ ze_add_source(ZECloudMaterial.h 					Sources Headers)
 ze_add_source(ZEDirectionalLight.cpp	 			Sources)
 ze_add_source(ZEDirectionalLight.h					Sources Headers ZEMC)
 ze_add_source(ZEFixedMaterial.cpp 					Sources)
-ze_add_source(ZEFixedMaterial.h 					Sources Headers ZEMC)
+ze_add_source(ZEFixedMaterial.h 					Sources Headers)
 ze_add_source(ZEFrameRenderer.cpp 					Sources)
 ze_add_source(ZEFrameRenderer.h 					Sources Headers)
 ze_add_source(ZEGraphicsModule.cpp 					Sources)
@@ -84,7 +84,7 @@ ze_add_source(ZESkyBoxMaterial.h 					Sources Headers)
 ze_add_source(ZESkyDomeMaterial.cpp 				Sources)
 ze_add_source(ZESkyDomeMaterial.h 					Sources Headers)
 ze_add_source(ZETerrainMaterial.cpp					Sources)
-ze_add_source(ZETerrainMaterial.h 					Sources Headers ZEMC)
+ze_add_source(ZETerrainMaterial.h 					Sources Headers)
 ze_add_source(ZETexture.cpp 						Sources)
 ze_add_source(ZETexture.h 							Sources Headers)
 ze_add_source(ZETexture2D.cpp						Sources)
