--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -38,11 +38,11 @@ cmake_minimum_required(VERSION 2.8)
 ze_add_source(ZEBitmap.cpp								Sources)
 ze_add_source(ZEBitmap.h								Sources Headers)
 ze_add_source(ZETexture2DResource.cpp					Sources)
-ze_add_source(ZETexture2DResource.h						Sources Headers)
+ze_add_source(ZETexture2DResource.h						Sources Headers ZEMC)
 ze_add_source(ZETexture3DResource.cpp					Sources)
 ze_add_source(ZETexture3DResource.h						Sources Headers)
 ze_add_source(ZETextureResource.cpp						Sources)
-ze_add_source(ZETextureResource.h						Sources Headers)
+ze_add_source(ZETextureResource.h						Sources Headers ZEMC)
 ze_add_source(ZETextureCacheDataIdentifier.cpp			Sources)
 ze_add_source(ZETextureCacheDataIdentifier.h			Sources Headers)
 ze_add_source(ZETextureCubeResource.cpp					Sources)
@@ -99,12 +99,6 @@ ze_add_source(ZETextureTools.cpp						Sources)
 ze_add_source(ZETextureTools.h							Sources Headers)
 ze_add_source(ZEBitmap.cpp								Sources)
 ze_add_source(ZEBitmap.h								Sources Headers)
-ze_add_source(ZETextureResource.cpp						Sources)
-ze_add_source(ZETextureResource.h						Sources Headers)
-ze_add_source(ZETexture2DResource.cpp					Sources)
-ze_add_source(ZETexture2DResource.h						Sources Headers)
-ze_add_source(ZETexture3DResource.cpp					Sources)
-ze_add_source(ZETexture3DResource.h						Sources Headers)
 ze_add_source(ZETextureCubeResource.cpp					Sources)
 ze_add_source(ZETextureCubeResource.h					Sources Headers)
 ze_add_source(ZETextureCacheDataIdentifier.cpp			Sources)
@@ -155,6 +149,7 @@ ze_add_source(ZEDecompressorBMPRLE.h					Sources)
 ze_add_library(ZETexture 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
+	ZEMC ${ZEMC}
 	LIBS ZEFoundation libFreeImage libATICompress ZEDirect3D9)
 
 ze_add_test(ZETextureTests 
