CHG: ZEMetaCollection has been renamed to ZEMetaRegister. ADD: ZEMetaModuleRegister, which stores ZEMetaRegister entries, has been added. ADD: ZEMetaModuleRegister generation code has been added to ZEBuild for ze_add_executable and ze_add_plugin commands. FIX: Unused functions ZEParticleSystem::GetParticlesPerSecond and ZEParticalSystem::SetParticlesPerSecond has been removed.
svn path=/branches/v0.6.1-NewMeta/; revision=1300

--- a/Source/ZEEngine/ZEMeta/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMeta/CMakeLists.txt
@@ -38,8 +38,6 @@ cmake_minimum_required (VERSION 2.8)
 ze_add_source(ZEClass.cpp						Sources)
 ze_add_source(ZEClass.h 						Sources Headers)
 ze_add_source(ZEClassOverloads.cpp				Sources)
-ze_add_source(ZEMetaCollection.h				Sources Headers)
-ze_add_source(ZEMetaCollection.cpp				Sources)
 ze_add_source(ZEObject.cpp						Sources)
 ze_add_source(ZEObject.h						Sources Headers)
 ze_add_source(ZEAnimation.cpp					Sources)
@@ -87,6 +85,10 @@ ze_add_source(ZEVariant.cpp						Sources)
 ze_add_source(ZEVariant.h						Sources Headers)
 ze_add_source(ZEReference.cpp					Sources)
 ze_add_source(ZEReference.h						Sources Headers)
+ze_add_source(ZEMetaRegister.cpp				Sources)
+ze_add_source(ZEMetaRegister.h					Sources Headers)
+ze_add_source(ZEMetaModuleRegister.cpp			Sources)
+ze_add_source(ZEMetaModuleRegister.h			Sources Headers)
 
 
 ze_add_library(ZEMeta 
