FIX: Circular includes has been removed. CHG: ZEType, ZETypeGenerator, ZEVariant has been moved into ZEDS. REM: ZETypeInfo has been removed.
svn path=/branches/v0.6.1-NewMeta/; revision=1329

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -47,7 +47,7 @@ ze_add_source(ZECloudMaterial.h 					Sources Headers)
 ze_add_source(ZEDirectionalLight.cpp	 			Sources)
 ze_add_source(ZEDirectionalLight.h					Sources Headers ZEMC)
 ze_add_source(ZEFixedMaterial.cpp 					Sources)
-ze_add_source(ZEFixedMaterial.h 					Sources Headers)
+ze_add_source(ZEFixedMaterial.h 					Sources Headers ZEMC)
 ze_add_source(ZEFrameRenderer.cpp 					Sources)
 ze_add_source(ZEFrameRenderer.h 					Sources Headers)
 ze_add_source(ZEGraphicsModule.cpp 					Sources)
@@ -86,13 +86,13 @@ ze_add_source(ZESkyDomeMaterial.h 					Sources Headers)
 ze_add_source(ZETerrainMaterial.cpp					Sources)
 ze_add_source(ZETerrainMaterial.h 					Sources Headers)
 ze_add_source(ZETexture.cpp 						Sources)
-ze_add_source(ZETexture.h 							Sources Headers)
+ze_add_source(ZETexture.h 							Sources Headers ZEMC)
 ze_add_source(ZETexture2D.cpp						Sources)
-ze_add_source(ZETexture2D.h 						Sources Headers)
+ze_add_source(ZETexture2D.h 						Sources Headers ZEMC)
 ze_add_source(ZETexture3D.cpp 						Sources)
 ze_add_source(ZETexture3D.h 						Sources Headers)
 ze_add_source(ZETextureCube.cpp 					Sources)
-ze_add_source(ZETextureCube.h 						Sources Headers)
+ze_add_source(ZETextureCube.h 						Sources Headers ZEMC)
 ze_add_source(ZEUIMaterial.cpp 						Sources)
 ze_add_source(ZEUIMaterial.h 						Sources Headers ZEMC)
 ze_add_source(ZEVertexBuffer.cpp 					Sources)
