--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -46,7 +46,7 @@ ze_add_source(ZETextureResource.h						Sources Headers ZEMC)
 ze_add_source(ZETextureCacheDataIdentifier.cpp			Sources)
 ze_add_source(ZETextureCacheDataIdentifier.h			Sources Headers)
 ze_add_source(ZETextureCubeResource.cpp					Sources)
-ze_add_source(ZETextureCubeResource.h					Sources Headers)
+ze_add_source(ZETextureCubeResource.h					Sources Headers ZEMC)
 ze_add_source(ZETextureData.cpp							Sources)
 ze_add_source(ZETextureData.h				    		Sources Headers)
 ze_add_source(ZETextureFile.cpp			  				Sources)
