--- a/Source/ZEFoundation/ZEDS/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEDS/CMakeLists.txt
@@ -89,6 +89,12 @@ ze_add_source(ZETypedValue.cpp			Sources)
 ze_add_source(ZETypedValue.h			Sources Headers)
 ze_add_source(ZEValue.cpp				Sources)
 ze_add_source(ZEValue.h					Sources Headers)
+ze_add_source(ZEVariant.cpp				Sources)
+ze_add_source(ZEVariant.h					Sources Headers)
+ze_add_source(ZEType.cpp				Sources)
+ze_add_source(ZEType.h					Sources Headers)
+ze_add_source(ZETypeGenerator.cpp				Sources)
+ze_add_source(ZETypeGenerator.h					Sources Headers)
 ze_add_source(ZEVariantTests.cpp		Tests)
 ze_add_source(ZEPointerTestClass.h		Tests)
 ze_add_source(ZEPointerTestClass.cpp	Tests)
