NOTE : Comit leftout.
svn path=/trunk/; revision=1344

--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -82,7 +82,7 @@ ze_add_source(ZESkyDome.h				Sources Headers)
 ze_add_source(ZETrigger.cpp				Sources)
 ze_add_source(ZETrigger.h				Sources Headers ZEPP)
 ze_add_source(ZEWeather.cpp				Sources)
-ze_add_source(ZEWeather.h				Sources Headers)
+ze_add_source(ZEWeather.h				Sources Headers ZEPP)
 
 ze_add_library(ZEGame 
 	SOURCES ${Sources}
