ADD : ZESeaMaterial creation function added to ZEGraphicsModule interface. ADD : ZESeaMaterial added to ZEGraphics.
svn path=/trunk/; revision=1349

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -103,6 +103,8 @@ ze_add_source(ZEVertexTypes.cpp 					Sources)
 ze_add_source(ZEVertexTypes.h 						Sources Headers)
 ze_add_source(ZEViewPort.cpp 						Sources)
 ze_add_source(ZEViewPort.h 							Sources Headers)
+ze_add_source(ZESeaMaterial.cpp 					Sources)
+ze_add_source(ZESeaMaterial.h 						Sources Headers)
 
 
 ze_add_library(ZEGraphics 
