CHG: Some post process effect default settings are changed. FIX: MLAA, DOF, Fog Processors bugs fixed and visual qualities improved. FIX: GBuffer.hlsl specular bug fixed. ADD: HDRProcessorTest added for fixing HDR Bugs and tryouts.
svn path=/trunk/; revision=1353

--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -65,25 +65,27 @@ ze_add_source(ZED3D9CommonTools.h						Sources)
 ze_add_source(ZED3D9ComponentBase.cpp					Sources)
 ze_add_source(ZED3D9ComponentBase.h						Sources)
 ze_add_source(ZED3D9DOFProcessor.cpp					Sources)
-ze_add_source(ZED3D9DOFProcessor.h						Sources)
+ze_add_source(ZED3D9DOFProcessor.h						Sources ZEPP)
 ze_add_source(ZED3D9EDProcessor.cpp						Sources)
 ze_add_source(ZED3D9EDProcessor.h						Sources)
 ze_add_source(ZED3D9FixedMaterial.cpp					Sources)
 ze_add_source(ZED3D9FixedMaterial.h						Sources)
 ze_add_source(ZED3D9FogProcessor.cpp					Sources)
-ze_add_source(ZED3D9FogProcessor.h						Sources)
+ze_add_source(ZED3D9FogProcessor.h						Sources ZEPP)
 ze_add_source(ZED3D9FrameRenderer.cpp					Sources)
 ze_add_source(ZED3D9FrameRenderer.h						Sources)
 ze_add_source(ZED3D9GrainProcessor.cpp					Sources)
 ze_add_source(ZED3D9GrainProcessor.h					Sources)
 ze_add_source(ZED3D9HDRProcessor.cpp					Sources)
 ze_add_source(ZED3D9HDRProcessor.h						Sources ZEPP)
+ze_add_source(ZED3D9HDRProcessorTest.cpp				Sources)
+ze_add_source(ZED3D9HDRProcessorTest.h					Sources ZEPP)
 ze_add_source(ZED3D9IndexBuffer.cpp						Sources)
 ze_add_source(ZED3D9IndexBuffer.h						Sources)
 ze_add_source(ZED3D9MLAAProcessorAreaImage.cpp			Sources)
 ze_add_source(ZED3D9MLAAProcessorAreaImage.h			Sources)
 ze_add_source(ZED3D9MLAAProcessor.cpp					Sources)
-ze_add_source(ZED3D9MLAAProcessor.h						Sources)
+ze_add_source(ZED3D9MLAAProcessor.h						Sources ZEPP)
 ze_add_source(ZED3D9Module.cpp							Sources)
 ze_add_source(ZED3D9Module.h							Sources)
 ze_add_source(ZED3D9MoonMaterial.cpp					Sources)
