--- a/Source/ZETools/ZETerrainExporter/CMakeLists.txt
+++ b/Source/ZETools/ZETerrainExporter/CMakeLists.txt
@@ -33,15 +33,19 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
-ze_set_project_folder("ZETools")
+ze_add_source(ZETerrainBlock.cpp			Sources)
+ze_add_source(ZETerrainBlock.h				Sources)
+ze_add_source(ZETerrainPatch.cpp			Sources)
+ze_add_source(ZETerrainPatch.h				Sources)
+ze_add_source(ZETerrainDatabase.cpp			Sources)
+ze_add_source(ZETerrainDatabase.h			Sources)
+ze_add_source(ZETerrainExporterMain.cpp		Sources)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ZEToolComponents)
 
-ze_add_module(ZE3dsMax)
-ze_add_module(ZEFontBaker)
-ze_add_module(ZEToolComponents)
-ze_add_module(ZECrashReport)
-ze_add_cmake_project(ZETools)
+ze_add_executable(ZETerrainExporter
+	CONSOLE
+	SOURCES ${Sources}
+	LIBS ZEFoundation libFreeImage)
+
