ADD : TPSAzimuthScaleUIControl, TPSCrosshairUIControl, TPSElevationScaleUIControl added to TusasPayloadSim project. FIX : Freetype related build issues fixed.
svn path=/trunk/; revision=1361

--- a/Source/ZEEngine/ZEUI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEUI/CMakeLists.txt
@@ -79,6 +79,7 @@ ze_add_source(ZEUITextCursor.cpp					Sources)
 ze_add_source(ZEUITextCursor.h						Sources Headers)
 ze_add_source(ZEUIDebugDrawTag.cpp					Sources)
 ze_add_source(ZEUIDebugDrawTag.h					Sources Headers)
+ze_add_source(ZEFreeType.h							Sources Headers)
 
 
 
